--- a/shared/Unity Theater Seats Shared/Unity Theater Seats Shared.csproj
+++ b/shared/Unity Theater Seats Shared/Unity Theater Seats Shared.csproj
@@ -10,6 +10,8 @@
     <RootNamespace>Unity_Theater_Seats_Shared</RootNamespace>
     <AssemblyName>Unity Theater Seats Shared</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+	<LangVersion>8.0</LangVersion>
+	<nullable>Enable</nullable>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
     <NuGetPackageImportStamp>
@@ -33,6 +35,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FlatBuffers">
+      <HintPath>lib\FlatBuffers.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Bcl.AsyncInterfaces, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Bcl.AsyncInterfaces.6.0.0\lib\net461\Microsoft.Bcl.AsyncInterfaces.dll</HintPath>
     </Reference>
@@ -74,9 +79,13 @@
     <Compile Include="Databases\FilmDatabase.cs" />
     <Compile Include="Databases\UserDatabase.cs" />
     <Compile Include="DataModels\Film.cs" />
+    <Compile Include="DataModels\FilmList.cs" />
     <Compile Include="DataModels\Reservation.cs" />
+    <Compile Include="DataModels\ReservationList.cs" />
     <Compile Include="DataModels\Show.cs" />
+    <Compile Include="DataModels\ShowList.cs" />
     <Compile Include="DataModels\User.cs" />
+    <Compile Include="DataModels\UserList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Databases\ReservationDatabase.cs" />
     <Compile Include="Databases\ShowDatabase.cs" />
